@@ -50,6 +50,9 @@
    - markus@cvs.openbsd.org 2001/05/24 11:12:42
      [auth.c]                                  
      fix comment; from jakob@                  
+   - stevesk@cvs.openbsd.org 2001/05/24 18:57:53                         
+     [clientloop.c readconf.c ssh.c ssh.h]                               
+     don't perform escape processing when ``EscapeChar none''; ok markus@
 
 20010528
  - (tim) [conifgure.in] add setvbuf test needed for sftp-int.c
